--- a/Random_Recipe_Finder_MAUI_APP/Random_Recipe_Finder_MAUI_APP.csproj
+++ b/Random_Recipe_Finder_MAUI_APP/Random_Recipe_Finder_MAUI_APP.csproj
@@ -65,6 +65,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.100" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.2" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 	</ItemGroup>
 
 </Project>
